[package]
edition = "2021"
name = "rustmodel"
rust-version = "1.67"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigdecimal = {version = "0.3.0", features = ["serde"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
strum = "0.24.1"
strum_macros = "0.24.1"
